--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <BODY style="background-color:#00FF00">
 
 <h2><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">definitely not an ip grabber:</a></h2>
-<img src="C:\Users\trey\Pictures\IMG_20210721_174246_HDR.jpg">
+<img src="./IMG_20210721_174246_HDR.jpg">
 </BODY>
